# PokerAI

./: .gitignore  LICENSE  Pipfile  README.md  azure-pipelines.yml  pyproject.toml
gym_holdem/: __init__.py
gym_holdem/envs/: action.py  holdem_env.py
gym_holdem/holdem/: __init__.py  player.py  pot.py  table.py
gym_holdem/spaces/: action_space.py
holdem/: __init__.py  bet_round.py  game.py  player.py  pot.py  table.py
tests/: test_env.py  test_player.py  test_table.py
