[tool.poetry]
name = "pokerai"
version = "0.1.0"
description = ""
authors = ["Jan Adä", "Henrik Böving"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.6"
treys = "0.1"
pokereval-cactus = "^0.1.0"

[tool.poetry.dev-dependencies]
pytest = "^4.5"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
