[tool.poetry]
name = "gym-holdem"
version = "0.1.0"
description = ""
authors = ["Jan Adä", "Henrik Böving"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.6"
pokereval-cactus = "^0.1.0"
gym = "^0.12.1"
keras = "^2.2"
tensorflow = "^1.13"

[tool.poetry.dev-dependencies]
pytest = "^4.5"
pytest-cov = "^2.7"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
